add rooms & exam_sessions

--- a/front/src/urls/create/question/create_question.css
+++ b/front/src/urls/create/question/create_question.css
@@ -43,6 +43,14 @@
     width: 45%;
 }
 
+.question-room-input {
+    width: 30%;
+}
+
+.question-room-label {
+    margin: 0;
+}
+
 .submit-answer-button {
     margin-top: 50px;
     height: 100px;
