--- a/front/src/urls/room/room.css
+++ b/front/src/urls/room/room.css
@@ -58,14 +58,14 @@
 
 .room-button {
     width: 300px;
-    height: 40px;
+    height: 70px;
     font-size:20px;
     padding-top: 2px;
 }
 
 .room-button-blue {
     width: 300px;
-    height: 40px;
+    height: 70px;
     font-size:20px;
     padding-top: 2px;
     color: rgb(255, 255, 255);
@@ -83,6 +83,20 @@
         10px 10px 0 0 #186fd3,
         11px 11px 0 0 #186fd3,
         12px 12px 0 0 #186fd3;
+}
+
+.room-button-blue:hover{
+    color:#444;
+}
+
+.room-button-blue:active{
+    color:#222;
+    box-shadow:inset 0 -4px 0 0 rgba(0,0,0,.2),
+        1px 1px 0 0 #186fd3,
+        2px 2px 0 0 #186fd3,
+        3px 3px 0 0 #186fd3,
+        4px 4px 0 0 #186fd3,
+        5px 5px 0 0 #186fd3;
 }
 
 .room-form-splitter {
